# Data-Science

./: Assignment 2 GAN
Assignment -4-TOPSIS_pretrained_model/: Readme.md
Assignment -4-TOPSIS_pretrained_model/data/: results.csv
Assignment -4-TOPSIS_pretrained_model/outputs/: topsis_ranking.csv
Assignment -4-TOPSIS_pretrained_model/src/: evaluate_modles.py  run_topsis.py
Assignment 2 GAN /: Readme.md  assignment 2 code
Assignment 3 TOPSIS/: README.md
Assignment 3 TOPSIS/Part_1/: README.md  data.csv  output-result.csv  topsis.py
Assignment 3 TOPSIS/Part_2/: README.md
Assignment 3 TOPSIS/Part_2/Topsis-keshava-102303982/: README.md  output.csv  pyproject.toml
Assignment 3 TOPSIS/Part_2/Topsis-keshava-102303982/topsis_keshava_102303982/: __init__.py  __main__.py  topsis.py
Assignment 3 TOPSIS/Part_3/: README.md  app.py
Assignment 3 TOPSIS/Part_3/templates/: index.html
Assignment-1-PDF-NO2/: README.md  assgnment no 3.ipynb
Assignment-5-Data Generation using Modelling and Simulation for Machine Learning/: README.md  ass - 6.ipynb  assignment.ipynb  model_comparison.csv  simpy_mm1k_dataset.csv
Assignment-6-Mashup/: Readme.md
Assignment6mashup/: .gitignore
Assignment_1_TOPSIS/: README.md
