[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Topsis-keshava-102303982"
version = "0.0.1"
description = "TOPSIS implementation (CLI + package)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pandas>=1.5", "numpy>=1.23"]

[project.scripts]
topsis-keshava-102303982 = "topsis_keshava_102303982.__main__:main"
